--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
  <p>比更好...</p>
 
 </div>
-<div id="its-in-3d" class="step " 
+<div id="better" class="step " 
   data-x="2925" data-y="2325" data-z="-3500" 
    
    data-rotate-x="10" 
