--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Checking Reveal.js</title>
+  <title>William@hicloud</title>
   <meta name="description" content="">
   <meta name="author" content="Ramnath Vaidyanathan">
   <meta name="apple-mobile-web-app-capable" content="yes" />
