--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <link rel="stylesheet" href="./frameworks/revealjs/css/reveal.min.css">
-  <link rel="stylesheet" href="./frameworks/revealjs/css/theme/moon.css" id="theme">
+  <link rel="stylesheet" href="./frameworks/revealjs/css/theme/night.css" id="theme">
   <link rel="stylesheet" href="./highlighters/highlight.js/css/zenburn.css" id="theme">
   <!--[if lt IE 9]>
   <script src="lib/js/html5shiv.js"></script>
@@ -191,7 +191,7 @@ HFT:
     progress: true,
     history: true,
     center: true,
-    theme: Reveal.getQueryHash().theme || 'moon', 
+    theme: Reveal.getQueryHash().theme || 'night', 
     transition: Reveal.getQueryHash().transition || 'cube', 
     dependencies: [
     // Cross-browser shim that fully implements classList -
