--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
    </section>
    <section class='' data-state='blue'>
     <pre><code>ChinaFutures:
-    ✘ 新的 twap 算法交易 @fl @cancelled (2019-09-27 13:58)
+    ✔ 新的 twap 算法交易 @fl @cancelled (2019-09-27 13:58)
       🌘-&gt; 系统迁移到 python3k
     ✔ 交易系统升级到 python3k @fl @done (2019-09-27 13:59)
         ✔ InstrumentInfo @done (2019-09-27 13:59)
@@ -62,7 +62,6 @@
         ✔ TickData @done (2019-09-27 13:59)
         ☐ 策略模板
     ☐ CTP-c++ CodeReview @lzx @fl
-    ☐ Pybind11 扩展
 </code></pre>
 
     <aside class='notes'>
@@ -74,6 +73,10 @@
     ✔ 中泰服务器升级，需要更改连接 IP @fl @done (2019-09-23 15:29)
     ✔ 聚宽数据的每日更新 @lj @done (2019-09-25 13:27)
     ✘ 50ETF期权数据获取与入库 @cancelled (2019-09-25 14:24)
+    ✔ Pybind11 扩展
+        ✔ ctp
+        ✔ xtp
+        ✘ tora
     中泰 XTP:
         ✔ 使用 api 执行新股申购 @fl @done (2019-09-27 13:55)
         ✘ 50etf期权程序化交易接口 @fl @pc @cancelled (2019-09-25 14:22)
@@ -82,7 +85,7 @@
     华鑫奇点:
         ☐ 测试模拟账户的登录、下单等基本功能
         ☐ 封装 python 接口
-        ☐ 开户，商讨合作细节
+        ✔ 开户，商讨合作细节
 </code></pre>
 
     <aside class='notes'>
@@ -93,7 +96,7 @@
     <pre><code>DirtyWork:
     ✔ 使用阿里云与本地服务器保持连接，
        用于检查是否断电断网，并发送邮件预警（1hour） @fl @done (2019-09-23 10:00)
-    ☐ hicloudR 软件包发布 0.1.0 @fl
+    ✔ 采购京东云，实现内网穿透，方便从外部访问本地服务器
 </code></pre>
 
     <aside class='notes'>
@@ -114,10 +117,8 @@
     ☐ 新的 twap 算法交易 @fl @lzx
 
 ChinaStocks:
-    ☐ XTP 系统登录, xtpGateway 封装 @lj
-
-数据:
-    ☐ 聚宽历史数据下载 @lj
+    ☐ Tora 系统登录, toraGateway 封装 @fl
+    ☐ 完成 xtp 大新策略开发 @lj
 </code></pre>
 
     <aside class='notes'>
