--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
 ChinaStocks:
     ☐ Tora 系统登录, toraGateway 封装 @fl
-    ☐ 完成 xtp 大新策略开发 @lj
+    ☐ 完成 xtp 打新策略开发 @lj
 </code></pre>
 
     <aside class='notes'>
