--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     
     <ul>
 <li>确定分钟策略的交易框架 </li>
-<li>技术文档</li>
+<li>技术文档: <a href="https://hicloud.gitbook.io/hibook/">https://hicloud.gitbook.io/hibook/</a></li>
 <li>技术交流</li>
 <li>外部交流</li>
 </ul>
