--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   
 </section>
 <section class='' data-state='' id='slide-2'>
-  <h2>汉云投资 2020 年会</h2>
+  <h2>汉云投资 <span style="color:red;font-weight:bold">2020 年会</font></h2>
   
   
 </section>
