--- a/index.html
+++ b/index.html
@@ -299,6 +299,10 @@
    <section class='' data-state='yello'>
     <h2>专注</h2>
 
+<script>
+$('ul.incremental li').addClass('fragment')
+</script>
+
     <aside class='notes'>
       
     </aside>
