--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
    </section>
    
    <section class='' data-state='blue'>
-    <h2>新时代，新生代</h2>
+    <h2>20:新时代，新生代</h2>
 
 <p class='fragment'>我们告别了一个时代，我们也迎来了一个时代。</p>
 
@@ -298,6 +298,18 @@
    
    <section class='' data-state='yello'>
     <h2>专注</h2>
+
+    <aside class='notes'>
+      
+    </aside>
+   </section>
+   
+   <section class='' data-state=''>
+    <p class='fragment'>胸有大志，脚踏实地</p>
+
+<p><a href="#" class="image navigate-down">
+  <img width="680" height="600" src="./imgs/work-hard-dream-big.jpg" alt="Down arrow">
+</a></p>
 
 <script>
 $('ul.incremental li').addClass('fragment')
